# quetz-frontend-extension-cookiecutter-ts

./: README.md  cookiecutter.json
.github/workflows/: check-tests.yml  main.yml
hooks/: post_gen_project.py
{{cookiecutter.python_name}}/: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
{{cookiecutter.python_name}}/.github/workflows/: build.yml  update-integration-tests.yml
{{cookiecutter.python_name}}/schema/: plugin.json
{{cookiecutter.python_name}}/src/: index.ts
{{cookiecutter.python_name}}/src/__tests__/: {{cookiecutter.python_name}}.spec.ts
{{cookiecutter.python_name}}/ui-tests/: README.md  package.json  playwright.config.js
{{cookiecutter.python_name}}/ui-tests/tests/: {{cookiecutter.python_name}}.spec.ts
{{cookiecutter.python_name}}/{{cookiecutter.python_name}}/: __init__.py
