[build-system]
requires = ["jupyter_packaging~=0.10,<2", "quetz-frontend"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["{{ cookiecutter.python_name }}/quetzextension/static/style.js"]
ensured-targets = ["{{ cookiecutter.python_name }}/quetzextension/static/style.js", "{{ cookiecutter.python_name }}/quetzextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["yarn"]

[tool.check-manifest]
ignore = ["{{ cookiecutter.python_name }}/quetzextension/**", "yarn.lock", ".*", "package-lock.json"]
